# Ariadne

./: .env.example  .gitignore  docker-compose.dev.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/: README.md  alembic.ini  coverage.json  test_mcp_schema.py  test_mcp_tools.py
backend/alembic/versions/: 202512240001_add_tags.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  cache.py  encryption.py  llm_client.py  logging.py  security.py
backend/mcp_server/: __init__.py  main.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_auth.py  test_bulk_service.py  test_contract.py  test_lineage_service.py  test_sources_tables_fields.py
docs/: ai-prompt-engineering-improvements.md  backend-execution-plan.md  execution-plan-overview.md  frontend-execution-plan.md  phase-2-acceptance-checklist.md  phase-2-api-spec.md  phase-2-backend-roadmap.md  phase-2-final-decisions.md  phase-2-frontend-roadmap.md  phase-2-overview.md  phase-3-backend-roadmap.md  phase-3-frontend-roadmap-part1.md  phase-3-frontend-roadmap-part2.md  phase-3-frontend-roadmap-part3.md  phase-3-overview.md  qc-agent-role.md  qc-execution-plan.md  sql-lineage-subagent-design.md
docs/agents/: troubleshooter-context.md
docs/api/: openapi.yaml
docs/design/: phase-0-api-requirements.md  phase-0-wireframes.md
docs/guides/: fernet-encryption-guide.md
docs/issues/: phase-2-lineage-field-display.md  phase-2-lineage-fix-plan.md  phase-2-lineage-implementation-clarification.md
docs/reviews/: phase-0-final-approval.md  phase-0-qc-review.md  phase-1-final-approval.md  phase-1-qc-review.md  phase-2-qc-review.md
docs/setup/: dev-environment-setup.md
frontend/: .env.development  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  setupTests.ts
scripts/: verify-environment.sh
(+106 files in other folders)
